$Id: History,v 1.7 2002-04-19 10:54:23 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 19th, 2002 G.Cosmo - exbiasing-V04-00-04
- Added disclaimer of liability and minor cosmetics...

April 12th, 2002 M.Dressel
- Change class B06ImportanceDetectorConstruction.hh and exampleB06.cc.
  B06ImportanceDetectorConstruction does not derive from 
  G4UserDetectorConstruction, function Construct made private
  and called in Constructor.

April 8th, 2002  G.Cosmo - exbiasing-V04-00-03
- Fixed usage of 'first'/'second' in iterators for porting
  on DEC-cxx non-ISO.

April 8th, 2002  M.Dressel - exbiasing-V04-00-02
- Resolved compilation problems on HP-aCC.

April 4th, 2002  M.Dressel - exbiasing-V04-00-01
- Resolved compilation problems on SUN-CC and Linux-egcs.

March 28th, 2002  M.Dressel - exbiasing-V04-00-00
- First implementation of importance biasing and scoring user examples.

March 25th, 2002  G.Cosmo
- Created.